# Virtual-Learning-System

./: .gitignore  AdminHomePage.h  AdminPage.cpp  AllLecture.cpp  AllLecture.h  BackButton.cpp  BackButton.h  CMakeLists.txt  CMakeLists.txt.user.4621d39  CMakeLists.txt.user.4b99347  DatabaseManager.cpp  DatabaseManager.h  LoginPage.cpp  LoginPage.h  LoginPage.ui  ProfilePage.cpp  ProfilePage.h  README.md  StudentAllCourses.cpp  StudentAllCourses.h  StudentHomePage.cpp  StudentHomePage.h  SupabaseConfig.h  TeacherHomePage.cpp  TeacherHomePage.h  TopBar.cpp  TopBar.h  allCourses.cpp  allCourses.h  allassignments.cpp  allassignments.h  allusers.cpp  allusers.h  createcourse.cpp  createcourse.h  enrollStudent.cpp  enrollStudent.h  main.cpp  mainwindow.cpp  mainwindow.h  (+14 more)
images/: desktop.ini
